<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/footer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/shopping_cart_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingRight="8dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/total_writing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/total_price"
                android:text="@string/shopping_cart_footer_total"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="8dp"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1px" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shopping_cart_page_desc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="#0000FF"
            android:textColor="#000"
            android:textSize="14sp"
            android:layout_margin="10dp"
            />
        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="1px" />
    </LinearLayout>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/shopping_cart_footer_title"
        android:textSize="18sp" />

    <com.ibuildapp.romanblack.CataloguePlugin.view.SoftInputModeCleanEditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shopping_cart_edittext_no_errors"
        android:hint="@string/shopping_cart_first_name"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#66000000"
        android:textColorHint="@color/black_trans_20" />

    <com.ibuildapp.romanblack.CataloguePlugin.view.SoftInputModeCleanEditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shopping_cart_edittext_no_errors"
        android:hint="@string/shopping_cart_last_name"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#66000000"
        android:textColorHint="@color/black_trans_20" />

    <com.ibuildapp.romanblack.CataloguePlugin.view.SoftInputModeCleanEditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shopping_cart_edittext_no_errors"
        android:hint="@string/shopping_cart_email_address"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#66000000"
        android:textColorHint="@color/black_trans_20" />

    <com.ibuildapp.romanblack.CataloguePlugin.view.SoftInputModeCleanEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shopping_cart_edittext_no_errors"
        android:hint="@string/shopping_cart_phone"
        android:inputType="phone"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#66000000"
        android:textColorHint="@color/black_trans_20" />

    <com.ibuildapp.romanblack.CataloguePlugin.view.SoftInputModeCleanEditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shopping_cart_edittext_no_errors"
        android:hint="@string/shopping_cart_country"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#66000000"
        android:textColorHint="@color/black_trans_20" />

    <com.ibuildapp.romanblack.CataloguePlugin.view.SoftInputModeCleanEditText
        android:id="@+id/street_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shopping_cart_edittext_no_errors"
        android:hint="@string/shopping_cart_street_address"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#66000000"
        android:textColorHint="@color/black_trans_20" />

    <com.ibuildapp.romanblack.CataloguePlugin.view.SoftInputModeCleanEditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shopping_cart_edittext_no_errors"
        android:hint="@string/shopping_cart_city"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#66000000"
        android:textColorHint="@color/black_trans_20" />

    <com.ibuildapp.romanblack.CataloguePlugin.view.SoftInputModeCleanEditText
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shopping_cart_edittext_no_errors"
        android:hint="@string/shopping_cart_state"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#66000000"
        android:textColorHint="@color/black_trans_20" />

    <com.ibuildapp.romanblack.CataloguePlugin.view.SoftInputModeCleanEditText
        android:id="@+id/zip_code"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shopping_cart_edittext_no_errors"
        android:hint="@string/shopping_cart_zip_code"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#66000000"
        android:textColorHint="@color/black_trans_20" />

    <com.ibuildapp.romanblack.CataloguePlugin.view.SoftInputModeCleanEditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shopping_cart_edittext_no_errors"
        android:gravity="top"
        android:hint="@string/shopping_cart_note"
        android:lines="3"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#66000000"
        android:textColorHint="@color/black_trans_20" />

    <TextView
        android:id="@+id/apply"
        android:layout_width="236dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shopping_cart_apply"
        android:gravity="center" />

</LinearLayout>