<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/navbar_holder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black_trans_20"
        android:orientation="horizontal"
        android:paddingLeft="6dp">

        <LinearLayout
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:src="@drawable/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/back"
                android:textColor="@color/black_trans_90"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/shopping_cart"
            android:textColor="@color/black_trans_90"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/hamburger_view_btn"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:layout_marginRight="9dp"
            android:src="@drawable/hamburger_black" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/empty_cart_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/empty_cart_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/shopping_cart_is_empty"
        android:textSize="18sp" />

</LinearLayout>