<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/navbar_holder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black_trans_20"
        android:orientation="horizontal"
        android:paddingLeft="6dp">

        <LinearLayout
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:src="@drawable/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/back"
                android:textColor="@color/black_trans_90"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:textColor="@color/black_trans_90"
            android:textSize="17sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:id="@+id/orderconfirmation_scroll_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/orderconfirmation_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/sergeyb_shopingcard_cart_pic" />

            <TextView
                android:id="@+id/order_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/shopping_cart_your_order_number"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/shopping_cart_your_order_number_comment"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>